Bug 958978 - Yearly recurrences with BYMONTH and more BYDAY are displayed wrongly if the last day of the month is not displayed in the view. r=philipp, a=starred